KinD/study/traefikind/manifest/a000/a025-traefik-services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-dashboard-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: traefik

---
kind: Service
apiVersion: v1
metadata:
  name: traefik-web-service
spec:
  type: ClusterIP
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik
