KinD/study/traefikind/manifest/a000/a105-whoami-services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: whoami
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: whoami
