KinD/study/traefikind/manifest/a000/a027-traefik-ingress.yaml
---
### ingress traefik dashboard
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - dashboard
  routes:
  - match: Host(`traefik.0a0f122c.nip.io`)
    kind: Rule
    middlewares:
    services:
    - name: traefik-dashboard-service
      port: 8080
      scheme: dashboard
